; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-sha.c_atmel_sha_hmac_key_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-sha.c_atmel_sha_hmac_key_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atmel_sha_hmac_key = type { i32, i32, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.atmel_sha_hmac_key*, i32*, i32)* @atmel_sha_hmac_key_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atmel_sha_hmac_key_set(%struct.atmel_sha_hmac_key* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.atmel_sha_hmac_key*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.atmel_sha_hmac_key* %0, %struct.atmel_sha_hmac_key** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %9 = call i32 @atmel_sha_hmac_key_release(%struct.atmel_sha_hmac_key* %8)
  %10 = load i32, i32* %7, align 4
  %11 = zext i32 %10 to i64
  %12 = icmp ugt i64 %11, 4
  br i1 %12, label %13, label %28

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* @GFP_KERNEL, align 4
  %17 = call i32 @kmemdup(i32* %14, i32 %15, i32 %16)
  %18 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %19 = getelementptr inbounds %struct.atmel_sha_hmac_key, %struct.atmel_sha_hmac_key* %18, i32 0, i32 3
  store i32 %17, i32* %19, align 4
  %20 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %21 = getelementptr inbounds %struct.atmel_sha_hmac_key, %struct.atmel_sha_hmac_key* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %13
  %25 = load i32, i32* @ENOMEM, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %4, align 4
  br label %41

27:                                               ; preds = %13
  br label %35

28:                                               ; preds = %3
  %29 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %30 = getelementptr inbounds %struct.atmel_sha_hmac_key, %struct.atmel_sha_hmac_key* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @memcpy(i32 %31, i32* %32, i32 %33)
  br label %35

35:                                               ; preds = %28, %27
  %36 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %37 = getelementptr inbounds %struct.atmel_sha_hmac_key, %struct.atmel_sha_hmac_key* %36, i32 0, i32 0
  store i32 1, i32* %37, align 4
  %38 = load i32, i32* %7, align 4
  %39 = load %struct.atmel_sha_hmac_key*, %struct.atmel_sha_hmac_key** %5, align 8
  %40 = getelementptr inbounds %struct.atmel_sha_hmac_key, %struct.atmel_sha_hmac_key* %39, i32 0, i32 1
  store i32 %38, i32* %40, align 4
  store i32 0, i32* %4, align 4
  br label %41

41:                                               ; preds = %35, %24
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @atmel_sha_hmac_key_release(%struct.atmel_sha_hmac_key*) #1

declare dso_local i32 @kmemdup(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
